--- a/our_dogs.html
+++ b/our_dogs.html
@@ -1,12 +1,12 @@
-<?php
-require_once 'config/connect.php';
-?>
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <title>Diamond Ray</title>
   <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
@@ -58,6 +58,9 @@ require_once 'config/connect.php';
             </li>
             <li class="nav-item shop align-items-center justify-content-center">
               <a href="basket.php" class="p-2"><span class="fa fa-shopping-cart"></span></a>
+            </li>
+            <li class="nav-item shop align-items-center justify-content-center">
+              <a href="authorization.php" class="p-2"><span class="fa fa-user-circle"></span></a>
             </li>
           </ul>
         </div>
