--- a/shop.html
+++ b/shop.html
@@ -35,64 +35,66 @@
 ?> 
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <title>Diamond Ray</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
-  </head>
-  <body>
-    
-    <header role="banner">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container">
+<head>
+  <title>Diamond Ray</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+</head>
+<body>
+  
+  <header role="banner">
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
         <div class="row col-4">
           <div class="col-8 col-sm-6 col-md-6 col-lg-3 col-xl-4 ">
             <img class="img-fluid" src="img/logo.png" alt="logo">
           </div>
           <div class="col-2 col-lg-2 col-xl-2 d-flex align-items-center">
-            <a class="navbar-brand absolute" href="index.html">Diamond Ray</a>
+            <a class="navbar-brand absolute" href="index.php">Diamond Ray</a>
           </div>
         </div>
 
-<!--ГАМБУРГЕР-->
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <!--ГАМБУРГЕР-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"style="background-image: url('img/menu.svg');"></span>
+        </button>
 
-<!--МЕНЮ-->
-          <div class="collapse navbar-collapse" id="navbarsExample05">
-            <ul class="navbar-nav mx-auto pl-lg-6 pl-md-8">
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">О питомнике</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="our_dogs.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Наши собаки</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                  <a class="dropdown-item" href="puppy.html">Щенки</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="shop.html">Зоотовары</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blog.html">Статьи</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Отзывы</a>
-              </li>
-               <li class="nav-item shop align-items-center justify-content-center">
-                <a href="#" class="p-2"><span class="fa fa-shopping-cart"></span></a>
-              </li>
-            </ul>
-          </div>
+        <!--МЕНЮ-->
+        <div class="collapse navbar-collapse" id="navbarsExample05">
+          <ul class="navbar-nav mx-auto pl-lg-6 pl-md-8">
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">О питомнике</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="our_dogs.html" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Собаки</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown01">
+                <a class="dropdown-item" href="our_dogs.html">Наши собаки</a>
+                <a class="dropdown-item" href="puppy.php">Щенки</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="shop.php">Зоотовары</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.php">Статьи</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.php">Отзывы</a>
+            </li>
+            <li class="nav-item shop align-items-center justify-content-center">
+              <a href="basket.php" class="p-2"><span class="fa fa-shopping-cart"></span></a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 
 
 <!--СЛАЙДЕР-->
